--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,5 @@ body {
 body {
   background-image: url('https://cdn.glitch.global/efa41d69-4881-4ef2-a5f3-edc9df4feb69/2.jpg?v=1653611078334')
     cover;
+  font-size: 3rem;
 }
