--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 body {
-  background-image: url('https://cdn.glitch.global/efa41d69-4881-4ef2-a5f3-edc9df4feb69/2.jpg?v=1653611078334')
+  background-image: url('img/2.jpg')
     cover;
   font-size: 3rem;
 }
