--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,7 @@ body {
 }
 
 body {
-  background-image: url('img/2.jpg')
-    cover;
+  background: url('../img/2.jpg') no-repeat;
   font-size: 3rem;
 }
 
